# Health-Nexus

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  images.py  records.py
backend/app/core/: config.py  security.py
backend/app/middleware/: audit.py  cors.py
backend/app/schemas/: chatbot.py  llm_client.py  summarizer.py
backend/app/services/: chatbot.py  image_analyzer.py  llm_client.py  summarizer.py
backend/app/utils/: pdf_extractor.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/admin/: page.tsx
frontend/src/app/dashboard/clinician/: page.tsx
frontend/src/app/dashboard/patient/: page.tsx
frontend/src/lib/: fetcher.ts
frontend/src/styles/: globals.css
frontend/streamlit_app/: api.py  app.py
